@@ -54,12 +54,24 @@ class ModelCacheSourceTest( GafferSceneTest.SceneTestCase ) :
 		m = GafferScene.ModelCacheSource()
 		self.assertEqual( m["out"].attributes( "/somewhere" ), IECore.CompoundObject() )
 	
-	@unittest.expectedFailure
 	def testReadFile( self ) :
 	
-		# when we've got the ModelCache implemented properly in cortex,
-		# make some test files and check we can read them here.
-		raise NotImplementedError
+		mc = IECore.ModelCache( "/tmp/test.mdc", IECore.IndexedIOOpenMode.Write )
+		
+		t = mc.writableChild( "transform" )
+		t.writeTransform( IECore.M44d.createTranslated( IECore.V3d( 1, 0, 0 ) ) )
+		
+		s = t.writableChild( "shape" )
+		s.writeObject( IECore.SpherePrimitive( 10 ) )
+		
+		del mc, t, s
+		
+		m = GafferScene.ModelCacheSource()
+		m["fileName"].setValue( "/tmp/test.mdc" )
+		self.assertSceneValid( m["out"] )
+	
+		self.assertEqual( m["out"].transform( "/transform" ), IECore.M44f.createTranslated( IECore.V3f( 1, 0, 0 ) ) )
+		self.assertEqual( m["out"].object( "/transform/shape" ), IECore.SpherePrimitive( 10 ) )
 	
 if __name__ == "__main__":
 	unittest.main()
