@@ -40,6 +40,8 @@
 
 * NodeUI now also shows output plugs. They can be removed as necessary by registering None with PlugValueWidget.registerCreator().
 
+* ModelCacheSource now uses the new ModelCache class provided by Cortex.
+
 0.35.5
 ------
 
